--- a/plugins/MythicMobs/Skills/ユージア・グラム地方/WATERBURST.yml
+++ b/plugins/MythicMobs/Skills/ユージア・グラム地方/WATERBURST.yml
@@ -23,4 +23,4 @@ WATERBURST_HIT:
   Skills:
   - effect:sound{s=minecraft:item.bottle.fill;v=2;p=1;repeat=5;repeatInterval=5}
   - effect:sound{s=minecraft:entity.tropical_fish.hurt.blow_up;v=2;p=0.5}
-  - damage{a=1800;i=true;type=Water}
+  - damage{a="1800*<caster.level>/8;i=true;type=Water}
