--- a/plugins/MythicMobs/Mobs/ゾーン古代遺跡/Kodaino_Skeleton2.yml
+++ b/plugins/MythicMobs/Mobs/ゾーン古代遺跡/Kodaino_Skeleton2.yml
@@ -49,6 +49,7 @@ Kodaino_Skeleton2:
   -  mmoitems{type=GEM_STONE;id=MAGICAL_C} 1-2 5%
   Skills:
   -  skill{s=Kodaino_Waterwall} @self ~onTimer:521
+  -  skill{s=Changetarget} ~onTimer:160 <99%
   -  skill{s=Kodaino_Sunderlight} @self ~onTimer:1001
   -  skill{s=Kodaino_FireBalls} @self ~onTimer:332
   -  currencygive{amount=10000} @pir{r=20} ~onDeath
