--- a/plugins/MythicMobs/Mobs/ゾーン古代遺跡/Reaper2.yml
+++ b/plugins/MythicMobs/Mobs/ゾーン古代遺跡/Reaper2.yml
@@ -33,6 +33,7 @@ reaper2:
   -  model{mid=reaper;n=false} @self ~onSpawn
   -  threat{amount=10000} @NearestPlayer ~onSpawn
   -  randomskill{skills=slashone,slashtwo,dash;sync=true} ~onAttack
+  -  skill{s=Changetarget} ~onTimer:160 <99%
   -  skill{s=Kodaino_lockfire} @self ~onDamaged <50% 0.08
   -  skill{s=reaper_fireburst} @self ~onDamaged 0.2
   -  skill{s=Reaper_lightning} @self ~onTimer:1000
