--- a/plugins/MMOItems/item/material.yml
+++ b/plugins/MMOItems/item/material.yml
@@ -490,16 +490,15 @@ UMIKAGE_AMULET:
 FRAGMENT:
   base:
     material: IRON_NUGGET
-    name: '&a業火のアルカナ・ゴーレムのかけら'
-    lore:
-    - '&f業火のアルカナ・ゴーレムのかけら'
-    - '&f手に持つとほんのり暖かい'
     tier: UNCOMMON
     unbreakable: true
     disable-smithing: true
     disable-enchanting: true
     disable-repairing: true
     disable-smelting: true
+    name: '&aアルカナゴーレムのかけら'
+    lore:
+    - '&fアルカナゴーレムの体の一部'
 MOUNTCHCKET1:
   base:
     material: NAME_TAG
@@ -639,7 +638,6 @@ RAREWATER:
 MANAWATER:
   base:
     material: POTION
-    name: '&aアルカナゴーレムの魔水'
     tier: UNCOMMON
     potion-color: 20 200 20
     vanilla-eating: true
@@ -665,7 +663,7 @@ GOLEM_HUSK:
     disable-enchanting: true
     disable-smithing: true
     disable-smelting: true
-    
+
 SOUPSTOCK_KELP:
   base:
     material: dried_kelp
@@ -778,3 +776,19 @@ TEST_DIAMOND:
     material: diamond
     name: '&eダイアモンド(テスト)'
     tier: COMMON
+MAGICCRYSTAL_LOW1:
+  base:
+    material: LAPIS_LAZULI
+    custom-model-data: 1.0
+    name: 最低品質のマナ結晶
+MAGICCRYSTAL_LOW2:
+  base:
+    material: LAPIS_LAZULI
+    custom-model-data: 2.0
+    name: '&a低品質のマナ結晶'
+ONFIRE1_ADD:
+  base:
+    material: BOOK
+    custom-nbt: []
+    enchants:
+      onfire: 3.0
