--- a/plugins/MythicMobs/Mobs/ユージア・グラム地方/ARCANA_GOLEM_FIRE.yml
+++ b/plugins/MythicMobs/Mobs/ユージア・グラム地方/ARCANA_GOLEM_FIRE.yml
@@ -45,6 +45,7 @@ ARCANA_GOLEM_FIRE:
   -  skill{s=FLAMEINRADIUS} @self ~onTimer:821
   -  skill{s=FLAME_LOCK} @self ~onTimer:461
   -  skill{s=FLAME_KEEP} @self ~onTimer:201
+  -  skill{s=EXPSCALING_USIA} @pir{r=20} ~onDeath
   KillMessages:
   -  '&l&4<DeadLog>&f<target.name>は<mob.name>に喰らわれた！'
   -  '&l&4<DeadLog>&f<target.name>は腐肉と化してしまった！'
