--- a/plugins/MythicMobs/Mobs/ユージア・グラム地方/ARCANA_GOLEM_WATER.yml
+++ b/plugins/MythicMobs/Mobs/ユージア・グラム地方/ARCANA_GOLEM_WATER.yml
@@ -38,12 +38,14 @@ ARCANA_GOLEM_WATER:
   -  mmoitems{type=MATERIAL;id=GOLEM_HUSK} 1-5 50%
   -  mmoitems{type=MATERIAL;id=MANAWATER} 1-3 50%
   -  mmoitems{type=MATERIAL;id=RAREWATER} 1-2 20%
+  -  mmoitems{type=MATERIAL;id=FRAGMENT} 1-5 50%
   Skills:
   -  currencygive{amount=5000} @pir{r=20} ~onDeath
   -  skill{s=WATEREFFECT_BIG} @self ~onTimer:5
   -  skill{s=Changetarget} ~onTimer:160 <99%
   -  skill{s=WATERBURST} @self ~onTimer:421
   -  skill{s=WATER_KEEP} @self ~onTimer:301
+  -  skill{s=EXPSCALING_USIA} @pir{r=20} ~onDeath
   KillMessages:
   -  '&l&4<DeadLog>&f<target.name>は<mob.name>に喰らわれた！'
   -  '&l&4<DeadLog>&f<target.name>は腐肉と化してしまった！'
