--- a/plugins/MythicMobs/Mobs/ユージア・グラム地方/UMIKAGE.yml
+++ b/plugins/MythicMobs/Mobs/ユージア・グラム地方/UMIKAGE.yml
@@ -39,6 +39,7 @@ UMIKAGE:
   -  currencygive{amount=1100-1600} @pir{r=20} ~onDeath
   -  skill{s=UMI_PULL} @self ~onDamaged 0.2
   -  skill{s=RAINBURST} @self ~onDamaged 0.2
+  -  skill{s=EXPSCALING_USIA} @pir{r=20} ~onDeath
   KillMessages:
   -  '&l&4<DeadLog>&f<target.name>は<mob.name>に喰らわれた！'
   -  '&l&4<DeadLog>&f<target.name>は腐肉と化してしまった！'
