--- a/plugins/MythicMobs/Mobs/ユージア・グラム地方/Zombiee2.yml
+++ b/plugins/MythicMobs/Mobs/ユージア・グラム地方/Zombiee2.yml
@@ -27,11 +27,11 @@ Zombiee2:
   -  Damage: 2
   Skills:
   -  currencygive{amount=1000-1500} @pir{r=20} ~onDeath
+  -  skill{s=EXPSCALING_USIA} @pir{r=20} ~onDeath
   Drops:
   -  mmoitems{type=CONSUMABLE;id=ZOMBIEERAREBEAF} 1-3 1%
-  -  mmoitems{type=CONSUMABLE;id=ZOMBIEE_MEAT} 1-2 30%
-  -  mmoitems{type=MATERIAL;id=ZOMBIEE_BONE} 1-2 5%
-  -  mmoitems{type=MATERIAL;id=ZOMBIEE_BEAF} 1-5 15%
+  -  mmoitems{type=MATERIAL;id=ZOMBIEE_BONE} 1-2 30%
+  -  mmoitems{type=MATERIAL;id=ZOMBIEE_BEAF} 1-5 30%
   KillMessages:
   -  '&l&4<DeadLog>&f<target.name>は<mob.name>に喰らわれた！'
   -  '&l&4<DeadLog>&f<target.name>は腐肉と化してしまった！'
