--- a/plugins/MythicMobs/Skills/BLEADER/Lock_Fire.yml
+++ b/plugins/MythicMobs/Skills/BLEADER/Lock_Fire.yml
@@ -1,7 +1,7 @@
 Lock_Fire:
   Conditions:
   - hastag{t=Ren} false
-  - hastag{t=Triple_Slash} false
+  - hastag{t=TripleSlash} false
   - hastag{t=Movement} false
   Skills:
   - setvariable{var=skill.a;value="%mmocore_stat_attack_damage%";type=FLOAT} @self
